<package>
    <name>AeroHacks</name>
    <version>1.0.0</version>
    <description>
        AeroHacks Nov 2016
    </description>
    <maintainer email="mail@mail.com">Natalie Rakoski</maintainer>
    
    <buildtool_depend>catkin</buildtool_depend>
	
    <run_depend>ardrone_autonomy</run_depend>
    <run_depend>joy</run_depend>
	
    <license>BSD</license>
    <url>http://github.com/nrakoski3/AeroHacks</url>
</package>
